Closed Bug 1733503 Opened 3 years ago Closed 3 years ago

redirectStart and redirectEnd should not be exposed when there's a cross origin redirect for PerformanceNavigationTiming

Categories

(Core :: Performance, defect)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox94 --- fixed

People

(Reporter: sefeng, Assigned: sefeng)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Currently there are a couple github issues that are discussing about PerformanceNavigationTiming with cross origin redirects. See https://github.com/w3c/navigation-timing/issues/160 and https://github.com/whatwg/html/pull/7105. So we might need to change this again in the future, like to respect the TAO header.

However, I think at the moment, we should comply with existing expected behaviour, to not expose these 2 timings.

The actual text for hiding these information is actually missing at the
moment. This is the pending PR https://github.com/whatwg/html/pull/7105
which should fix it.

In addition to this PR, the obsolete (obsolete, but still accurate) definition
for redirectStart and redirectEnd has specified that when there's a
cross-origin redirect, these timings should not be exposed.

Obsolete definition: https://w3c.github.io/navigation-timing/#dom-performancetiming-redirectstart

Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f9bfbe44d85f
Don't expose redirectStart and redirectEnd when there's a cross-origin redirect for PerformanceNavigationTiming r=smaug
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: