dom/performance/PerformanceResourceTiming.cpp
@@ -114,8 +114,9 @@ bool PerformanceResourceTiming::TimingAllowedForCaller(
 }
 
 bool PerformanceResourceTiming::ReportRedirectForCaller(
-    Maybe<nsIPrincipal*>& aCaller) const {
-  if (mTimingData->ShouldReportCrossOriginRedirect()) {
+    Maybe<nsIPrincipal*>& aCaller, bool aEnsureSameOriginAndIgnoreTAO) const {
+  if (mTimingData->ShouldReportCrossOriginRedirect(
+          aEnsureSameOriginAndIgnoreTAO)) {
     return true;
   }
 
